# happy-gardenpi-client-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  happy-gardenpi-client-test_en_GB.ts  maincontroller.cpp  maincontroller.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/: constants.hpp  database.cpp  database.hpp  main.cpp  tui.cpp  tui.hpp
tmp/: CMakeLists.txt  maincontroller.cpp  maincontroller.hpp
